[package]
name = "IntBridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["clock", "iana-time-zone", "js-sys", "std"], default-features = false }
env_logger = "0.10.0"
log = "0.4.20"
rocket = { version = "=0.5.0-rc.3"}
serde = "1.0.188"
toml = "0.8.2"
